[BUGFIX FIXES #90731328] Adds bottom padding to body to prevent small footer from overlapping with page content dropdowns

--- a/app/assets/stylesheets/partials/_base.scss
+++ b/app/assets/stylesheets/partials/_base.scss
@@ -38,7 +38,7 @@ body {
   background-color: $white;
   padding-bottom: $headerHeight;
   min-height: 100%;
-  padding-bottom: $headerHeight;
+  padding-bottom: $headerHeight * 2.5;
   .no-mediaqueries & {
     min-width: $michigan;
   }
